// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs disabled navigation item is rendered 1`] = `
.c5 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 100%;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  border-bottom: 1px solid #f22613;
}

.c2 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: 0.694rem 1rem 0.694rem 1rem;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  color: #000000;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
  cursor: default;
  border-top: 1px solid #f22613;
  border-left: 1px solid #f22613;
  border-bottom: 1px solid #ffffff;
  border-right: 1px solid #f22613;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: 0.694rem 1rem 0.694rem 1rem;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  color: #000000;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
  color: #ccc !important;
  cursor: default;
}

<div>
  <div
    className="c0"
  >
    <ul
      className="c1"
    >
      <li
        className="c2"
      >
        <a
          className="c3"
          onClick={[Function]}
        >
          
        </a>
      </li>
      <li
        className="c2"
      >
        <a
          className="c4"
          onClick={[Function]}
        >
          
        </a>
      </li>
    </ul>
    <div
      className="c5"
    />
  </div>
</div>
`;

exports[`Tabs disabled navigation item is rendered if hidden 1`] = `
.c4 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 100%;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  border-bottom: 1px solid #f22613;
}

.c2 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: 0.694rem 1rem 0.694rem 1rem;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  color: #000000;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
  cursor: default;
  border-top: 1px solid #f22613;
  border-left: 1px solid #f22613;
  border-bottom: 1px solid #ffffff;
  border-right: 1px solid #f22613;
}

<div>
  <div
    className="c0"
  >
    <ul
      className="c1"
    >
      <li
        className="c2"
      >
        <a
          className="c3"
          onClick={[Function]}
        >
          
        </a>
      </li>
    </ul>
    <div
      className="c4"
    />
  </div>
</div>
`;

exports[`Tabs navigation is rendered 1`] = `
.c5 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 100%;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  border-bottom: 1px solid #f22613;
}

.c2 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: 0.694rem 1rem 0.694rem 1rem;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  color: #000000;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
}

.c3:hover,
.c3:active {
  color: #a7bd0d;
  background-color: #3498db;
  border-bottom: 1px solid #3498db;
}

.c4 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: 0.694rem 1rem 0.694rem 1rem;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  color: #000000;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
  cursor: default;
  border-top: 1px solid #f22613;
  border-left: 1px solid #f22613;
  border-bottom: 1px solid #ffffff;
  border-right: 1px solid #f22613;
}

<div>
  <div
    className="c0"
  >
    <ul
      className="c1"
    >
      <li
        className="c2"
      >
        <a
          className="c3"
          onClick={[Function]}
        >
          
        </a>
      </li>
      <li
        className="c2"
      >
        <a
          className="c4"
          onClick={[Function]}
        >
          
        </a>
      </li>
    </ul>
    <div
      className="c5"
    />
  </div>
</div>
`;

exports[`Tabs navigation is rendered with custom padding 1`] = `
.c4 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 100%;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  border-bottom: 1px solid #f22613;
}

.c2 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.2em;
  padding: xl;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  color: #000000;
  display: inline-block;
  cursor: pointer;
  font-size: 1rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 2px -1px 0;
  cursor: default;
  border-top: 1px solid #f22613;
  border-left: 1px solid #f22613;
  border-bottom: 1px solid #ffffff;
  border-right: 1px solid #f22613;
}

<div>
  <div
    className="c0"
  >
    <ul
      className="c1"
    >
      <li
        className="c2"
      >
        <a
          className="c3"
          onClick={[Function]}
        >
          
        </a>
      </li>
    </ul>
    <div
      className="c4"
    />
  </div>
</div>
`;

exports[`TabsItem is rendered 1`] = `
.c0 {
  margin: 0;
  padding: 1rem 0 1rem 0;
  box-sizing: border-box;
}

<div>
  <div
    className="c0"
  />
</div>
`;

exports[`TabsItem is rendered with custom padding 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.c1 {
  margin: 0;
  padding: 1rem;
  box-sizing: border-box;
}

.c2 {
  margin: 0;
  padding: xs;
  box-sizing: border-box;
}

.c3 {
  margin: 0;
  padding: smrem xsrem smrem xsrem;
  box-sizing: border-box;
}

.c4 {
  margin: 0;
  padding: xsrem xlrem lgrem smrem;
  box-sizing: border-box;
}

.c5 {
  margin: 0;
  padding: xs;
  box-sizing: border-box;
}

@media only screen and (min-width:48rem) {
  .c5 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c5 {
    padding: lg;
  }
}

@media only screen and (min-width:75rem) {
  .c5 {
    padding: xl;
  }
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;
